fixed gaps in flex-box formatting

--- a/assets/style.css
+++ b/assets/style.css
@@ -75,14 +75,12 @@
   article {
     display: flex;
     flex-wrap: wrap;
-    justify-items: space-evenly;
-  
+    align-content:flex-start;
   }
 
   .row {
     flex-flow: row;
     display: inline;
-    justify-content: flex-start;
     margin: 1rem;
     font-size: 1.7rem;
     color: var(--light);
@@ -98,7 +96,7 @@
 
   .row img {
     height: 15rem;
-    width: 40rem;
+    width: 47rem;
     border-radius: 2rem;
   }
     
@@ -111,17 +109,17 @@
   
   #About-Me{
     height: 50rem;
-    width: 95rem;
+    width: 97rem;
     background: var(--background);
   }
   #Projects img{
     height: 50rem;
-    width: 95rem;
+    width: 97rem;
     background: var(--dark);
   }
   #Projects2 #Resume{
     flex-basis: 100%;
-    justify-content: space-evenly;
+    justify-items: space-evenly;
     background: var(--dark);
   }
   .thumbnail { 
@@ -141,7 +139,7 @@
 
   #Contact{
     height: 7rem;
-    width: 95rem;
+    width: 97rem;
     background: var(--dark);
   }
 
@@ -157,7 +155,7 @@
 
   .aside{
     margin: 1rem 1rem;
-    height:200rem;
+    height:160rem;
     max-width:25%;
     font-size: 1.7rem;
     color: var(--light);
@@ -176,7 +174,7 @@
     text-align: center;
     font-size: 2.5rem;
     text-decoration:dotted;
-    margin-bottom:20rem;
+    margin-bottom:19rem;
     line-height: 3rem;
   }
 
